# leadscout

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_RULES.md  PRODUCTION_READY_SUMMARY.md  PROJECT_PLAN.md  README.md  ROOT_DIRECTORY_GUIDE.md  analyze_job_statistics.py  analyze_learning_performance.py  benchmark_learning_performance.py  check_cipc_availability.py  check_results.py  debug_learning_simple.py  debug_name_failures.py  diagnose_llm_fallback.py  download_cipc_data.py  export_job_results.py  pyproject.toml  quick_llm_test.py  run_logistics_demo.py  simple_cipc_download.py  test_50_leads.py  test_final_system_validation.py  test_final_validation.py  test_integration_validation.py  test_learning_effectiveness.py  test_learning_integration.py  test_logistics_leads.py  test_phase1_comprehensive.py  test_phase_a1_integration_validation.py  test_resumable_job_runner.py  test_subset_validation.py  validate_production.py  validate_system_performance.py  validation_results.json
.claude/: settings.json
archive/development-scripts/: test_cipc_single.py  test_cost_optimization.py  test_critical_fixes.py  test_immediate_learning.py  test_immediate_learning_integration.py  test_llm_fix.py  test_phonetic_evaluation.py  test_pipeline_validation.py  test_resumable_framework.py  test_simple_resumable.py
data/analysis/: comprehensive_data_analysis.json  learning_comparison.xlsx  learning_effectiveness_test.json
data/growfin/: CIPC Data PostDMA 20250702.xlsx  logistics_demo_results.xlsx  name_ethnicity.xlsx  quick_llm_test_results.csv  quick_llm_test_results.xlsx  ~$name_ethnicity.xlsx
data/output/: western_cape_transport_final.xlsx
data/test_runs/: comprehensive_validation_test.xlsx  core_enrichment_output.xlsx  transport_logistics_western_cape_test.xlsx
dev-tasks/: DEVELOPER_A_CLI_COMPLETION_ASSIGNMENT.md  DEVELOPER_A_PHASE_3_CONTINUATION.md  DEVELOPER_A_URGENT_DATA_FIX.md  DEVELOPER_B_COMPREHENSIVE_SYSTEM_VALIDATION.md  DEVELOPER_HANDOFF_INSTRUCTIONS.md  EPIC_1_DEVELOPER_A_ASSIGNMENT.md  EPIC_2_DEVELOPER_B_ASSIGNMENT.md  PROJECT_MANAGER_EPIC_TRACKING.md  SYSTEM_VALIDATION_REPORT.md  URGENT-DEVELOPER-CHECKPOINT.md  backlog-production-readiness.md  developer-a-compliance-report.md  developer-a-initialization-prompt.md  developer-a-integration-report.md  developer-a-next-phase-assignment.md  developer-a-next-phase-instructions.md  developer-a-resumable-job-framework-assignment.md  developer-a-session-summary.md  developer-b-classification-algorithm-enhancement.md  developer-b-classification-enrichment.md  developer-b-compliance-report.md  developer-b-enrichment-completion-report.md  developer-b-phase2-assignment.md  developer-b-validation-assignment.md  developer-b-validation-report.md  final-system-validation-assignment.md  final-validation-report.md  llm-fix-completion-report.md  research-and-development.md  research-name-classification-improvement.md  research-twilio-verify-assignment.md  researcher-initialization-prompt.md  resumable-framework-completion-report.md  verification-reality-check.md
dev-tasks/archive/: developer-a-remediation-instructions.md  developer-a-validation-assignment.md
docs/: CLAUDE_RULES_CONDENSED.md  DOCUMENTATION_INDEX.md  PRODUCTION_DEPLOYMENT_GUIDE.md  UTILITY_SCRIPTS_REFERENCE.md  coding-standards.md
docs/architecture/: auto-learning-system.md  system-design.md  updated-system-design.md
docs/archive/dev-assignments/: DEVELOPER_A_ENHANCEMENT_2_ASSIGNMENT.md  claude-role-management-strategy.md  developer-a-cipc-caching.md  developer-a-cipc-completion-report.md  developer-a-integration-assignment.md  developer-a-llm-fix-assignment.md  developer-a-next-instructions.md  developer-a-production-readiness-assignment.md  developer-a-verification-assignment.md  developer-b-initialization-prompt.md  developer-b-learning-database-integration.md  developer-b-llm-provider-guidance.md  developer-b-next-phase-instructions.md  fix-llm-fallback-complete-instructions.md  fix-llm-fallback-instructions.md  logging-architecture-improvement.md
docs/archive/legacy-docs/: LOGISTICS_TEST_SUMMARY.md  (+9 more)
docs/design/: address-cleaning-backlog.md  address-cleaning-developer-checklist.md  address-cleaning-system.md  ethnicity-confirmation-backlog.md  ethnicity-confirmation-system.md
research-findings/: cipc-data-integration.md  research-summary-report.md  supervisor-briefing-report.md
scripts/: analyze_exported_data.py  create_comprehensive_test_dataset.py  run_comprehensive_validation.py  test_core_enrichment.py  test_learning_effectiveness.py
scripts/db/: migrate.py
test_data/: immediate_learning_test.xlsx  integration_test.xlsx  resumable_test.xlsx  resume_test.xlsx  simple_test.xlsx  test_leads.xlsx
tests/: __init__.py
tests/fixtures/: sa_test_names.py
tests/unit/: __init__.py
(+73 files in other folders)
